--- a/app/index.html
+++ b/app/index.html
@@ -51,22 +51,52 @@
 		<div class="slider-container">
 			<div class="slider-text">
 				<div class="swiper-wrapper">
-					<div class="swiper-slide slider-text__slide">slide 1</div>
-					<div class="swiper-slide slider-text__slide">slide 2</div>
-					<div class="swiper-slide slider-text__slide">slide 3</div>
+					<div class="swiper-slide slider-text__slide">
+						<div class="slider-text__content">
+							<h2 class="slider-text__heading">Подбор внедорожника <span>на любой</span> случай</h2>
+							<p class="slider-text__description">
+								Выберем и подберём для вас любой внедорожник в кратчайшие сроки, с учётом всех ваших пожеланий и
+								всех необходимых потребностей.
+							</p>
+							<button class="button slider-text__button"><span>Оставить заявку</span></button>
+						</div>
+					</div>
+					<div class="swiper-slide slider-text__slide">
+						<div class="slider-text__content">
+							<h2 class="slider-text__heading">Индивидуальный подход <span>к каждому</span> покупателю</h2>
+							<p class="slider-text__description">
+								Все автомобили мы подбираем индивидуально для каждого клиента или покупателя и с трепетом
+								относимся к результату нашей работы.
+							</p>
+							<button class="button slider-text__button"><span>Оставить заявку</span></button>
+						</div>
+					</div>
+					<div class="swiper-slide slider-text__slide">
+						<div class="slider-text__content">
+							<h2 class="slider-text__heading">Выбор лучшей модели <span>из модельного</span> ряда</h2>
+							<p class="slider-text__description">
+								В нашем модельном ряду имеются модели сотен различных внедорожников, которые удовлетворят даже
+								самого требовательного клиента
+							</p>
+							<button class="button slider-text__button"><span>Оставить заявку</span></button>
+						</div>
+					</div>
 				</div>
 			</div>
-			
+
 			<div class="slider-img">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide slider-img__slide">
-						<div class="slider-img__bg" data-swiper-parallax="20%" style="background-image: url(images/dist/slide-images/1.jpg);"></div>
+						<div class="slider-img__bg" data-swiper-parallax="20%"
+							style="background-image: url(images/dist/slide-images/1.jpg);"></div>
 					</div>
 					<div class="swiper-slide slider-img__slide">
-						<div class="slider-img__bg" data-swiper-parallax="20%" style="background-image: url(images/dist/slide-images/2.jpg);"></div>
+						<div class="slider-img__bg" data-swiper-parallax="20%"
+							style="background-image: url(images/dist/slide-images/2.jpg);"></div>
 					</div>
 					<div class="swiper-slide slider-img__slide">
-						<div class="slider-img__bg" data-swiper-parallax="20%" style="background-image: url(images/dist/slide-images/3.jpg);"></div>
+						<div class="slider-img__bg" data-swiper-parallax="20%"
+							style="background-image: url(images/dist/slide-images/3.jpg);"></div>
 					</div>
 				</div>
 			</div>
@@ -84,10 +114,30 @@
 						</a>
 					</div>
 				</div>
-				<div class="slider-pagination">222</div>
-				<div class="slider-scrollbar">333</div>
-				<div class="slider-navigation">444</div>
+				<div class="slider-pagination">
+					<div class="swiper-pagination"></div>
+				</div>
+				<div class="slider-scrollbar">
+					<div class="swiper-scrollbar"></div>
+				</div>
+				<div class="slider-navigation">
+					<div class="slider-navigation__container">
+						<div class="swiper-button-prev"></div>
+						<div class="swiper-button-next"></div>
+					</div>
+				</div>
 			</div>
+
+			<div class="slider-pagination-count">
+				<span class="current">01</span> / <span class="total">04</span>
+			</div>
+
+			<div class="slider-pagination-current">01<span class="slider-pagination-current__dot">.</span></div>
+
+			<div class="slider-gear">
+
+			</div>
+
 		</div>
 
 	</div>
