added new files

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
 								Выберем и подберём для вас любой внедорожник в кратчайшие сроки, с учётом всех ваших пожеланий и
 								всех необходимых потребностей.
 							</p>
-							<button class="button slider-text__button"><span>Оставить заявку</span></button>
+							<button class="button slider-text__button" data-micromodal-open="modal-1"><span>Оставить заявку</span></button>
 						</div>
 					</div>
 					<div class="swiper-slide slider-text__slide">
@@ -129,10 +129,10 @@
 			</div>
 
 			<div class="slider-pagination-count">
-				<span class="current">01</span> / <span class="total">04</span>
+				<span class="current">01</span> / <span class="total"></span>
 			</div>
 
-			<div class="slider-pagination-current">01<span class="slider-pagination-current__dot">.</span></div>
+			<div class="slider-pagination-current"><span class="slider-pagination-current__num">01</span><span class="slider-pagination-current__dot">.</span></div>
 
 			<div class="slider-gear">
 
@@ -144,4 +144,5 @@
 
 </header>
 
+<!--#include virtual="/parts/modal.html" -->
 <!--#include virtual="/parts/footer.html" -->
