--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,8 @@
 <!--#set var="title" value="Create Cool Slider" -->
 <!--#include virtual="/parts/header.html" -->
 
+<div id="cursor"></div>
+
 <header class="home-header">
 	<div class="top-line">
 		<a href="" class="logo">
@@ -58,7 +60,8 @@
 								Выберем и подберём для вас любой внедорожник в кратчайшие сроки, с учётом всех ваших пожеланий и
 								всех необходимых потребностей.
 							</p>
-							<button class="button slider-text__button" data-micromodal-open="modal-1"><span>Оставить заявку</span></button>
+							<button class="button slider-text__button" data-micromodal-open="modal-1"><span>Оставить
+									заявку</span></button>
 						</div>
 					</div>
 					<div class="swiper-slide slider-text__slide">
@@ -132,7 +135,8 @@
 				<span class="current">01</span> / <span class="total"></span>
 			</div>
 
-			<div class="slider-pagination-current"><span class="slider-pagination-current__num">01</span><span class="slider-pagination-current__dot">.</span></div>
+			<div class="slider-pagination-current"><span class="slider-pagination-current__num">01</span><span
+					class="slider-pagination-current__dot">.</span></div>
 
 			<div class="slider-gear">
 
